--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     
 <main class="  my_height-width ">
     <div class="wrapper my_wrapper-wh ">
-        <img src="./image/01.webp" alt="spiderman marvel image">
-        <button class="before bg-dark"><i class="fa-solid fa-plane fa-rotate-180"></i></button>
-        <button class="after bg-dark"><i class="fa-solid fa-plane"></i></button>
+        <!--<img src="./image/01.webp" alt="spiderman marvel image">-->
+        <button class="before bg-dark"><i class="fa-solid fa-plane fa-rotate-270"></i></button>
+        <button class="after bg-dark"><i class="fa-solid fa-plane fa-rotate-90"></i></button>
     </div>
 </main>
 
