--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,39 @@
     <title>js carosello</title>
     <link rel="stylesheet" href="style/stile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">-->
+
 </head>
+
 <body>
-    
-<main class="  my_height-width ">
-    <div class="wrapper my_wrapper-wh ">
-        <!--<img src="./image/01.webp" alt="spiderman marvel image">-->
-        <button class="before bg-dark"><i class="fa-solid fa-plane fa-rotate-270"></i></button>
-        <button class="after bg-dark"><i class="fa-solid fa-plane fa-rotate-90"></i></button>
-    </div>
-</main>
+    <header class="d-flex">
+        <h1>Carousel Item</h1>
+    </header>
+
+    <main>
+        <!--<div class="container">
+            <img  src="./image/01.webp">
+            <div class="text-container">
+                <h1>Titolo</h1>
+                <p>Text</p>
+            </div>
+        </div>-->
+
+        <div class="container">
+            <div class="my_button-section">
+                <button class="button-before "><i class="fa-solid fa-plane fa-rotate-270"></i></button>
+                <button class="button-after"><i class="fa-solid fa-plane fa-rotate-90"></i></button>
+            </div>
+        </div>
 
 
 
+
+    </main>
 
 
 
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
